Refactor use ejs instead of static html pages

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
-  <link rel="stylesheet" href="stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body style="display: flex; height: 100vh; justify-content: center; align-items: center;">
@@ -15,7 +15,7 @@
       <h1>Register</h1>
       <h2>Create your account</h2>
     </hgroup>
-    <form action="/api/auth/register" method="post">
+    <form action="/auth/register" method="post">
       <input type="text" name="username" placeholder="Username" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
