--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2771,5 +2771,31 @@ textarea,
     transition-duration: 0s !important;
   }
 }
+.error-container {
+  background-color: rgba(255, 68, 68, 0.1);
+  border: 1px solid #ff4444;
+  color: #ff4444;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: var(--pico-border-radius);
+}
+
+.info-container {
+  background-color: rgba(51, 153, 255, 0.1);
+  border: 1px solid #3399ff;
+  color: #3399ff;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: var(--pico-border-radius);
+}
+
+.warn-container {
+  background-color: rgba(216, 151, 0, 0.1);
+  border: 1px solid #d89700;
+  color: #d89700;
+  padding: 10px;
+  margin: 10px 0;
+  border-radius: var(--pico-border-radius);
+}
 
 /*# sourceMappingURL=style.css.map */
