--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,1 +1,6 @@
-Hello World
+<% if (user === null) { %>
+    <p>You are not logged in. Please <a href="auth/login">login</a>.</p>
+<% } else { %>
+    <p>Welcome, <%= user.username %>! Your email is <%= user.email %>.</p>
+<% } %>
+  
