--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="stylesheets/style.css">
-  <script src="scripts/htmx/htmx.min.js"></script>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="/scripts/htmx/htmx.min.js"></script>
 </head>
 
 <body style="display: flex; height: 100vh; justify-content: center; align-items: center;" hx-boost="true">
@@ -16,7 +16,7 @@
       <h1>Sign in</h1>
       <h2>Please enter your detail</h2>
     </hgroup>
-    <form hx-post="/auth/login" hx-swap="afterbegin">
+    <form action="login" method="post">
       <input type="name" name="name" placeholder="Username or Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <fieldset>
