--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
-  <link rel="stylesheet" href="stylesheets/style.css">
-  <script src="scripts/htmx/htmx.min.js"></script>
+  <link rel="stylesheet" href="/stylesheets/style.css">
+  <script src="/scripts/htmx/htmx.min.js"></script>
 </head>
 
 <body style="display: flex; height: 100vh; justify-content: center; align-items: center;" hx-boost="true">
@@ -16,7 +16,7 @@
       <h1>Register</h1>
       <h2>Create your account</h2>
     </hgroup>
-    <form hx-post="/auth/register" hx-swap="afterbegin">
+    <form hx-post="register" hx-swap="afterbegin>
       <input type="text" name="username" placeholder="Username" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
