Fix minor htmx issues

--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -16,13 +16,13 @@
       <h1>Register</h1>
       <h2>Create your account</h2>
     </hgroup>
-    <form hx-post="register" hx-swap="afterbegin>
+    <form hx-post="register" hx-swap="afterbegin">
       <input type="text" name="username" placeholder="Username" required>
       <input type="email" name="email" placeholder="Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <button type="submit" class="contrast">Register</button>
     </form>
-    <p>Already have an account? <a href="login.html">Login here</a></p>
+    <p>Already have an account? <a href="login">Login here</a></p>
   </div>
 </body>
 
