--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -16,7 +16,7 @@
       <h1>Sign in</h1>
       <h2>Please enter your detail</h2>
     </hgroup>
-    <form action="login" method="post">
+    <form hx-post="login" hx-swap="afterbegin">
       <input type="name" name="name" placeholder="Username or Email" required>
       <input type="password" name="password" placeholder="Password" required>
       <fieldset>
@@ -27,7 +27,7 @@
       </fieldset>
       <button type="submit" class="contrast">Submit</button>
     </form>
-    <p>Don't have an account? <a href="register.html">Register here</a></p>
+    <p>Don't have an account? <a href="register">Register here</a></p>
   </div>
 </body>
 
